--- a/Projekt/ptgy2024_rallyprogram/pom.xml
+++ b/Projekt/ptgy2024_rallyprogram/pom.xml
@@ -14,6 +14,13 @@
 <junit.version>5.10.0</junit.version>  </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.45.1.0</version>
+    </dependency>
+
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
