--- a/Projekt/ptgy2024_rallyprogram/pom.xml
+++ b/Projekt/ptgy2024_rallyprogram/pom.xml
@@ -69,7 +69,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.progtech.ptgy2024_rallyprogram/com.progtech.ptgy2024_rallyprogram.HelloApplication</mainClass>
+              <mainClass>com.progtech.ptgy2024_rallyprogram/com.progtech.ptgy2024_rallyprogram.ProgramApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
